--- a/share/static/css/style.css
+++ b/share/static/css/style.css
@@ -52,8 +52,13 @@ header .right ul li {
   border: 0;
   border-radius: 5px;
   text-decoration: none;
-  margin-left: 1rem;
+  margin-left: 0;
   cursor: pointer;
+  font-size: 1rem;
+}
+
+.button.download {
+  margin-left: 1rem;
 }
 
 .close-button {
