Repair the css . . .

--- a/share/templates/403.html
+++ b/share/templates/403.html
@@ -4,7 +4,7 @@
 <head>
   <title>OnionShare: 403 Forbidden</title>
   <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
-  <link rel="stylesheet" rel="subresource" type="text/css" href="/static/css/style.css" media="none" onload="if(media!='all')media='all'">
+  <link rel="stylesheet" rel="subresource" type="text/css" href="/static/css/style.css" media="all">
 </head>
 
 <body>
