Update ReceiveMode to no longer rely on slugs

--- a/share/templates/receive.html
+++ b/share/templates/receive.html
@@ -45,7 +45,7 @@
         </ul>
       </div>
 
-      <form id="send" method="post" enctype="multipart/form-data" action="{{ upload_action }}">
+      <form id="send" method="post" enctype="multipart/form-data" action="/upload">
          <p><input type="file" id="file-select" name="file[]" multiple /></p>
          <p><button type="submit" id="send-button" class="button">Send Files</button></p>
       </form>
