Change link style for directory listing

--- a/share/static/css/style.css
+++ b/share/static/css/style.css
@@ -222,3 +222,12 @@ li.info {
   color: #666666;
   margin: 0 0 20px 0;
 }
+
+a {
+  text-decoration: none;
+  color: #1c1ca0;
+}
+
+a:visited {
+  color: #601ca0;
+}
