Only allow downloading of individual files if it is enabled in settings, and stop sharing automatically isn't

--- a/share/static/css/style.css
+++ b/share/static/css/style.css
@@ -56,6 +56,10 @@ header .right ul li {
   cursor: pointer;
 }
 
+a.button:visited {
+  color: #ffffff;
+}
+
 .close-button {
   color: #ffffff;
   background-color: #c90c0c;
