--- a/share/static/css/style.css
+++ b/share/static/css/style.css
@@ -74,6 +74,30 @@ a.button:visited {
   bottom: 10px;
 }
 
+ul.breadcrumbs {
+  display: block;
+  list-style: none;
+  margin: 10px 0;
+  padding: 0;
+}
+
+ul.breadcrumbs li {
+  display: inline-block;
+  list-style: none;
+  margin: 0;
+  padding: 5px;
+  color: #999999;
+}
+
+ul.breadcrumbs li span.sep {
+  padding-left: 5px;
+}
+
+ul.breadcrumbs li a:link, ul.breadcrumbs li a:visited {
+  color: #666666;
+  border-bottom: 1px solid #666666;
+}
+
 table.file-list {
   width: 100%;
   margin: 0 auto;
