--- a/share/templates/send.html
+++ b/share/templates/send.html
@@ -22,6 +22,12 @@
     <h1>OnionShare</h1>
   </header>
 
+  {% if breadcrumbs %}
+      <ul class="breadcrumbs">
+        {% for breadcrumb in breadcrumbs %}<li><a href="{{ breadcrumb[1] }}">{{ breadcrumb[0] }}</a> <span class="sep">&#8227;</span></li>{% endfor %}<li>{{ breadcrumbs_leaf }}</li>
+      </ul>
+    {% endif %}
+
   <table class="file-list" id="file-list">
     <tr>
       <th id="filename-header">Filename</th>
