--- a/cli/onionshare_cli/resources/templates/chat.html
+++ b/cli/onionshare_cli/resources/templates/chat.html
@@ -39,7 +39,7 @@
 
     </div>
   </div>
-  <script src="{{ static_url_path }}/js/jquery-3.5.1.min.js"></script>
+  <script src="{{ static_url_path }}/js/jquery-3.7.1.slim.min.js"></script>
   <script src="{{ static_url_path }}/js/socket.io.min.js"></script>
   <script async src="{{ static_url_path }}/js/chat.js"></script>
 </body>
