--- a/cli/onionshare_cli/resources/templates/receive.html
+++ b/cli/onionshare_cli/resources/templates/receive.html
@@ -59,7 +59,7 @@
     </form>
 
   </div>
-  <script src="{{ static_url_path }}/js/jquery-3.5.1.min.js"></script>
+  <script src="{{ static_url_path }}/js/jquery-3.7.1.slim.min.js"></script>
   <script async src="{{ static_url_path }}/js/receive.js" id="receive-script"></script>
 </body>
 
